--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,18 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "chart.js": "^4.4.4",
+    "chartjs-chart-matrix": "^2.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.429.0",
     "next": "14.2.6",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-spring": "^9.7.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
