--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "chart.js": "^4.4.4",
     "chartjs-chart-matrix": "^2.0.1",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +32,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-spring": "^9.7.4",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
